# honeypots

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-syslog  README.md  README.rst  auto_pip.sh  clean-up.logs  config-db.json  config-file-json.json  config-syslog.json  docker-compose.yml  pyproject.toml  setup.py  syslog-ng.conf  test  test_output  tpot.txt
.github/workflows/: main.yml  pre-commit.yaml  tests.yml
honeypots/: __init__.py  __main__.py  base_http_server.py  base_server.py  dhcp_server.py  dns_server.py  elastic_server.py  ftp_server.py  helper.py  hl7_server.py  honeypots  http_proxy_server.py  http_server.py  https_server.py  imap_server.py  ipp_server.py  irc_server.py  ldap_server.py  memcache_server.py  mssql_server.py  mysql_server.py  ntp_server.py  oracle_server.py  pjl_server.py  pop3_server.py  postgres_server.py  qbsniffer.py  rdp_server.py  redis_server.py  server_options.py  sip_server.py  smb_server.py  smtp_server.py  sniffer.py  snmp_server.py  socks5_server.py  ssh_server.py  telnet_server.py  testing.py  testing_all.py  (+2 more)
honeypots/data/: dummy_page.html  home.html  login.html
tests/: conftest.py  test_dhcp_server.py  test_dns_server.py  test_elastic_server.py  test_ftp_server.py  test_hl7_server.py  test_http_proxy_server.py  test_http_server.py  test_https_server.py  test_imap_server.py  test_ipp_server.py  test_irc_server.py  test_ldap_server.py  test_memcache_server.py  test_mssql_server.py  test_mysql_server.py  test_ntp_server.py  test_oracle_server.py  test_pjl_server.py  test_pop3_server.py  test_postgres_server.py  test_rdp_server.py  test_redis_server.py  test_sip_server.py  test_smb_server.py  test_smtp_server.py  test_snmp_server.py  test_socks5_server.py  test_ssh_server.py  test_telnet_server.py  test_vnc_server.py  utils.py
tests/data/: test_template.html
