[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "honeypots"
version = "0.64"
authors = [
    { name = "QeeqBox", email = "gigaqeeq@gmail.com" },
]
description = "30 different honeypots in one package! (dhcp, dns, elastic, ftp, http proxy, https proxy, http, https, imap, ipp, irc, ldap, memcache, mssql, mysql, ntp, oracle, pjl, pop3, postgres, rdp, redis, sip, smb, smtp, snmp, socks5, ssh, telnet, vnc)"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "twisted==21.7.0",
    "psutil==5.9.0",
    "psycopg2-binary==2.9.3",
    "pycryptodome==3.19.0",
    "requests==2.28.2",
    "requests[socks]==2.28.2",
    "impacket==0.9.24",
    "paramiko==3.1.0",
    "scapy==2.4.5",
    "service_identity==21.1.0",
    "netifaces==0.11.0",
]
license = {text = "AGPL-3.0"}

[project.urls]
Homepage = "https://github.com/qeeqbox/honeypots"

[project.optional-dependencies]
test = [
    "redis",
    "mysql-connector",
    "dnspython==2.4.2",
    "elasticsearch",
    "pymssql",
    "ldap3",
    "pysnmplib",
    "pytest",
    "redis",
    "vncdotool",
]

[project.scripts]
honeypots = "honeypots.__main__:main_logic"

[tool.setuptools]
packages = [
    "honeypots",
]
include-package-data = true
